src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Employment_Status__c</fullName>
        <label>Employment status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Employment_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Management/Professional</fullName>
                </value>
                <value>
                    <fullName>Unskilled</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Semi-skilled</fullName>
                </value>
                <value>
                    <fullName>Senior management</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Junior (J)</fullName>
                </value>
                <value>
                    <fullName>Management/Professional (M)</fullName>
                </value>
                <value>
                    <fullName>Unskilled (N)</fullName>
                </value>
                <value>
                    <fullName>Supervisor (O)</fullName>
                </value>
                <value>
                    <fullName>Semi-skilled (P)</fullName>
                </value>
                <value>
                    <fullName>Skilled (S)</fullName>
                </value>
                <value>
                    <fullName>Senior management (T)</fullName>
                </value>
                <value>
                    <fullName>Unemployed (U)</fullName>
                </value>
                <value>
                    <fullName>Other (X)</fullName>
                </value>
                <value>
                    <fullName>Not given (Z)</fullName>
                </value>
                <value>
                    <fullName>Skilled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Type_2__c</fullName>
        <label>Employment Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Self-employed professional</fullName>
                </value>
                <value>
                    <fullName>Self-employed non professionals</fullName>
                </value>
                <value>
                    <fullName>Temporary Employment</fullName>
                </value>
                <value>
                    <fullName>Part-time</fullName>
                </value>
                <value>
                    <fullName>Housewife</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Employed (E)</fullName>
                </value>
                <value>
                    <fullName>Self employed professional (P)</fullName>
                </value>
                <value>
                    <fullName>Self employed non-professional (N)</fullName>
                </value>
                <value>
                    <fullName>Housewife (H)</fullName>
                </value>
                <value>
                    <fullName>Part time (L)</fullName>
                </value>
                <value>
                    <fullName>Retired (R)</fullName>
                </value>
                <value>
                    <fullName>Student (S)</fullName>
                </value>
                <value>
                    <fullName>Temporary employment (T)</fullName>
                </value>
                <value>
                    <fullName>Unemployed (U)</fullName>
                </value>
                <value>
                    <fullName>Other (X)</fullName>
                </value>
                <value>
                    <fullName>Not Given (Z)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_Type__c</fullName>
        <label>Employment type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employed</fullName>
                </value>
                <value>
                    <fullName>Housewife</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Part time</fullName>
                </value>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Self Employed non-professional</fullName>
                </value>
                <value>
                    <fullName>Self Employed Professional</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Temporary Employment</fullName>
                </value>
                <value>
                    <fullName>Unemployed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employment_status_2__c</fullName>
        <label>Employment status 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Junior</fullName>
                </value>
                <value>
                    <fullName>Management/Professional</fullName>
                </value>
                <value>
                    <fullName>Unskilled</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Semi-skilled</fullName>
                </value>
                <value>
                    <fullName>Senior management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Junior (J)</fullName>
                </value>
                <value>
                    <fullName>Management/Professional (M)</fullName>
                </value>
                <value>
                    <fullName>Unskilled (N)</fullName>
                </value>
                <value>
                    <fullName>Supervisor (O)</fullName>
                </value>
                <value>
                    <fullName>Semi-skilled (P)</fullName>
                </value>
                <value>
                    <fullName>Skilled (S)</fullName>
                </value>
                <value>
                    <fullName>Senior management (T)</fullName>
                </value>
                <value>
                    <fullName>Unemployed (U)</fullName>
                </value>
                <value>
                    <fullName>Other (X)</fullName>
                </value>
                <value>
                    <fullName>Not given (Z)</fullName>
                </value>
                <value>
                    <fullName>Skilled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Monthly_Num_of_Transactions_Inward__c</fullName>
        <label>Est. Monthly Num. of Transactions Inward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5</fullName>
                </value>
                <value>
                    <fullName>6 - 10</fullName>
                </value>
                <value>
                    <fullName>11 - 19</fullName>
                </value>
                <value>
                    <fullName>20 - 50</fullName>
                </value>
                <value>
                    <fullName>50+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_Monthly_Num_of_Transactions_Outward__c</fullName>
        <label>Est. Mnthly Num. of Transactions Outward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5</fullName>
                </value>
                <value>
                    <fullName>6 - 10</fullName>
                </value>
                <value>
                    <fullName>11 - 19</fullName>
                </value>
                <value>
                    <fullName>20 - 50</fullName>
                </value>
                <value>
                    <fullName>50+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Cash_Deposit_frequency__c</fullName>
        <label>Estimated Cash Deposit frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5 weekly</fullName>
                </value>
                <value>
                    <fullName>6 - 10 weekly</fullName>
                </value>
                <value>
                    <fullName>11 - 19 weekly</fullName>
                </value>
                <value>
                    <fullName>20 - 50 weekly</fullName>
                </value>
                <value>
                    <fullName>50+ weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Cash_Withdrawal_Frequency__c</fullName>
        <label>Estimated Cash Withdrawal Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0 - 5 weekly</fullName>
                </value>
                <value>
                    <fullName>6 - 10 weekly</fullName>
                </value>
                <value>
                    <fullName>11 - 19 weekly</fullName>
                </value>
                <value>
                    <fullName>20 - 50 weekly</fullName>
                </value>
                <value>
                    <fullName>50+ weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Volume_Inward__c</fullName>
        <label>Estimated Monthly Volume Inward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>0 - 10,000</fullName>
                </value>
                <value>
                    <fullName>10,001 - 20,000</fullName>
                </value>
                <value>
                    <fullName>20,001 - 40,000</fullName>
                </value>
                <value>
                    <fullName>40,001 - 70,000</fullName>
                </value>
                <value>
                    <fullName>70,001 - 100,000</fullName>
                </value>
                <value>
                    <fullName>100,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Monthly_Volume_Outward__c</fullName>
        <label>Estimated Monthly Volume Outward</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>0 - 10,000</fullName>
                </value>
                <value>
                    <fullName>10,001 - 20,000</fullName>
                </value>
                <value>
                    <fullName>20,001 - 40,000</fullName>
                </value>
                <value>
                    <fullName>40,001 - 70,000</fullName>
                </value>
                <value>
                    <fullName>70,001 - 100,000</fullName>
                </value>
                <value>
                    <fullName>100,000+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_running_costs__c</fullName>
        <description>NPAA</description>
        <label>Estimated running costs</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_value_of_property__c</fullName>
        <label>Estimated value of property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ever_been_in_arrears_with_any_loans__c</fullName>
        <inlineHelpText>Includes mortgages &amp; rent</inlineHelpText>
        <label>Ever been in arrears with any loans</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ever_missed_financial_commitment__c</fullName>
        <inlineHelpText>Have you ever been behind with a financial commitment or had a house repossessed</inlineHelpText>
        <label>Ever missed financial commitment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Business_Bank_Account_Number__c</fullName>
        <label>Existing Business Bank Account Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Business_Bank_Name__c</fullName>
        <description>NPAA build</description>
        <label>Existing Business Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Business_Bank_Sort_Code__c</fullName>
        <label>Existing Business Bank Sort Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Customer__c</fullName>
        <formula>IF(ISBLANK(EBS_ID__c),&quot;N&quot;, &quot;Y&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Existing Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Experian_Reference_Number__c</fullName>
        <label>Experian Reference Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Age_range__c</fullName>
        <label>External Prospect Age range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Data_Expiry_date__c</fullName>
        <label>External Prospect Data Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Data_Hire_date__c</fullName>
        <label>External Prospect Data Hire date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Income_range__c</fullName>
        <label>External Prospect Income range</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Prospect_Unique_ID__c</fullName>
        <label>External Prospect Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>For_use_with_HPP_CAA_eligibility__c</fullName>
        <label>For use with HPP CAA eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency_of_overseas_trans_per_annum__c</fullName>
        <description>For use with NPAA</description>
        <label>Frequency of overseas trans per annum</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FullName__c</fullName>
        <formula>text(Salutation)+&quot; &quot;+ FirstName+ IF( Middle_Name__pc == null || Middle_Name__pc ==&apos;&apos;,&apos;&apos;,&apos; &apos; + Middle_Name__pc ) + &quot; &quot; +  LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male (M)</fullName>
                </value>
                <value>
                    <fullName>Female (F)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income_2__c</fullName>
        <label>Gross Annual Income 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Annual_Income__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Gross Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Commission2__c</fullName>
        <label>Guaranteed Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Commission__c</fullName>
        <label>Guaranteed Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Overtime2__c</fullName>
        <label>Guaranteed Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Overtime__c</fullName>
        <label>Guaranteed Overtime</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Shift_Allowance2__c</fullName>
        <label>Guaranteed Shift Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Shift_Allowance__c</fullName>
        <label>Guaranteed Shift Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_bonus_2__c</fullName>
        <label>Guaranteed bonus 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Guaranteed_bonus__c</fullName>
        <label>Guaranteed bonus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Happy_for_IBB_to_hold_your_data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please confirm you are happy for IBB to hold the information on you</inlineHelpText>
        <label>Happy for us to hold your data.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Second_Employment__c</fullName>
        <label>Has Second Employment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_any_arrear_s_worsened_in_last_6mth__c</fullName>
        <label>Have any arrear(s) worsened in last 6mth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_any_County_Court_Judgements__c</fullName>
        <label>Have you any County Court Judgements?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_been_made_bankrupt_or_have_CCJs__c</fullName>
        <label>Have you been made bankrupt or have CCJs</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_declared_bankrupt__c</fullName>
        <label>Have you ever been declared bankrupt?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_made_bankrupt__c</fullName>
        <inlineHelpText>Have you ever been made bankrupt?</inlineHelpText>
        <label>Have you ever been made bankrupt?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_been_refused_finance_v1__c</fullName>
        <label>Have you ever been refused finance?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_ever_had_a_CCJ__c</fullName>
        <inlineHelpText>Have you ever had a county court judgement made against you?</inlineHelpText>
        <label>Have you ever had a CCJ made against u?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_had_a_debt_relief__c</fullName>
        <label>Have you had a debt relief ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_had_any_IVA__c</fullName>
        <label>Have you had any IVA?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_previously_had_a_mortgage__c</fullName>
        <label>Have you previously had a mortgage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Details_Estimated_Value__c</fullName>
        <description>Home details: Property owned-estimated value</description>
        <label>Home Details: Estimated Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Details_Mortgage_Outstanding__c</fullName>
        <label>Home Details: Mortgage Outstanding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Home_Details_Name_of_Lender__c</fullName>
        <label>Home Details: Name of Lender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Details__c</fullName>
        <label>Home Details</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Council Tenant</fullName>
                </value>
                <value>
                    <fullName>Joint Owner</fullName>
                </value>
                <value>
                    <fullName>Living with Parents</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Tenant Furnished</fullName>
                </value>
                <value>
                    <fullName>Tenant Unfurnished</fullName>
                </value>
                <value>
                    <fullName>Owner Occupier</fullName>
                </value>
                <value>
                    <fullName>Other Tenant (T)</fullName>
                </value>
                <value>
                    <fullName>Council Tenant (C)</fullName>
                </value>
                <value>
                    <fullName>Joint Owner (J)</fullName>
                </value>
                <value>
                    <fullName>Owner Occupier (O)</fullName>
                </value>
                <value>
                    <fullName>Living with Parents (P)</fullName>
                </value>
                <value>
                    <fullName>Other (X)</fullName>
                </value>
                <value>
                    <fullName>Tenant Furnished (F)</fullName>
                </value>
                <value>
                    <fullName>Tenant Unfurnished (U)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Telephone_No__c</fullName>
        <label>Primary contact number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_IBB__c</fullName>
        <label>How did you hear about  Al Rayan Bank?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internet search</fullName>
                </value>
                <value>
                    <fullName>Newspaper advert</fullName>
                </value>
                <value>
                    <fullName>TV Advert</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Through the mosque</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Received info through post</fullName>
                </value>
                <value>
                    <fullName>Press Article</fullName>
                </value>
                <value>
                    <fullName>Radio advert</fullName>
                </value>
                <value>
                    <fullName>Recommended by family friend</fullName>
                </value>
                <value>
                    <fullName>Internet search (INTERNET)</fullName>
                </value>
                <value>
                    <fullName>Newspaper advert (NEWSPAPER)</fullName>
                </value>
                <value>
                    <fullName>TV Advert (TVADVERT)</fullName>
                </value>
                <value>
                    <fullName>Website (WEBSITE)</fullName>
                </value>
                <value>
                    <fullName>Through the mosque (MOSQUE)</fullName>
                </value>
                <value>
                    <fullName>Word of mouth (MOUTH)</fullName>
                </value>
                <value>
                    <fullName>Other (OTHER)</fullName>
                </value>
                <value>
                    <fullName>Received info through post (POST)</fullName>
                </value>
                <value>
                    <fullName>Press Article (PRESS)</fullName>
                </value>
                <value>
                    <fullName>Radio advert (RADIO)</fullName>
                </value>
                <value>
                    <fullName>Recommended by family friend (RECOM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_do_you_receive_your_salary_2__c</fullName>
        <label>How do you receive your salary 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bank transfer</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_do_you_receive_your_salary__c</fullName>
        <label>How do you receive your salary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paid into bank account</fullName>
                </value>
                <value>
                    <fullName>Cheque</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_long_have_you_been_in_current_job__c</fullName>
        <label>How long have you been in current job</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_long_have_you_being_with_lender__c</fullName>
        <label>How long have you being with lender?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_much_is_outstanding_on_mortgage__c</fullName>
        <label>How much is outstanding on mortgage?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_often_are_you_paid2__c</fullName>
        <label>How often are you paid 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Four weekly (x13)</fullName>
                </value>
                <value>
                    <fullName>Piece work</fullName>
                </value>
                <value>
                    <fullName>Fortnightly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_often_are_you_paid__c</fullName>
        <label>How often are you paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>